--- a/.gitignore
+++ b/.gitignore
@@ -47,6 +47,10 @@ ExportedObj/
 *.pidb.meta
 *.pdb.meta
 *.mdb.meta
+*.asset
+*.meta
+*.preset
+.Resources/
 
 # Unity3D generated file on crash reports
 sysinfo.txt
