--- a/.gitignore
+++ b/.gitignore
@@ -51,6 +51,13 @@ ExportedObj/
 *.meta
 *.preset
 .Resources/
+.Temp/
+.Logs/
+.Settings/
+.Scenes/
+.Packages/
+.UserSettings/
+.Library/
 
 # Unity3D generated file on crash reports
 sysinfo.txt
