--- a/.gitignore
+++ b/.gitignore
@@ -50,15 +50,15 @@ ExportedObj/
 *.asset
 *.meta
 *.preset
-.Resources/
-.Temp/
-.Logs/
-.Settings/
-.Scenes/
-.Packages/
-.UserSettings/
-.Library/
-.Materials/
+Resources/**
+Temp/**
+Logs/**
+Settings/**
+Scenes/**
+Packages/**
+UserSettings/**
+Library/**
+Materials/**
 
 # Unity3D generated file on crash reports
 sysinfo.txt
